--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,14 @@ services:
     - rsvpnet
 
  web:
-   image: teamcloudyuga/rsvpapp:mooc
+   build: . 
    ports:
     - "5000:5000"
    environment:
     MONGODB_HOST: mongodb
-    LINK: http://www.meetup.com/cloudyuga/
-    TEXT1: CloudYuga 
-    TEXT2: Garage RSVP!
-    LOGO: https://raw.githubusercontent.com/cloudyuga/rsvpapp/master/static/cloudyuga.png
-    COMPANY: CloudYuga Technology Pvt. Ltd.
+    TEXT1: Hackfest 
+    TEXT2: Registration 
+    ORGANIZER: UVCE 
    networks:
     - rsvpnet
 
